--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@ Use this app for testing/dev without actual backend. Use mocks instead. App belo
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
 
-    <!-- Optional theme -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">-->
-
     <!-- Custom styles -->
     <link href="styles/styles.css" rel="stylesheet">
 </head>
@@ -27,30 +24,42 @@ Use this app for testing/dev without actual backend. Use mocks instead. App belo
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a ng-href="#/">Notes</a></li>
-                    <li><a ng-href="#/profile">Profile</a></li>
-                    <li><a ng-href="#/signout">Signout</a></li>
+                    <li ng-show="!isAuthenticated"><a ng-href="#/login">Signin</a></li>
+                    <li ng-show="!isAuthenticated"><a ng-href="#/signup">Signup</a></li>
+                    <li ng-show="isAuthenticated"><a ng-href="#/">Notes</a></li>
+                    <li ng-show="isAuthenticated"><a ng-href="#/profile">Profile</a></li>
+                    <li ng-show="isAuthenticated"><a ng-href="#/signout">Signout</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container" role="main" ng-view>App is starting...</div>
+    <div class="container" role="main" ng-view>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 100%">
+                    <span class="sr-only">Loading ...</span>
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <script src="/vendor/nive/endpoint-0.7.1.js"></script>
-    <script src="/vendor/angular/angular.js"></script>
-    <script src="/vendor/angular-route/angular-route.js"></script>
-    <script src="/vendor/angular-nive/angular-nive-0.7.0.js"></script>
+    <script src="vendor/angular/angular.min.js"></script>
+    <script src="vendor/angular-route/angular-route.min.js"></script>
+    <script src="vendor/nive/endpoint-0.7.1.js"></script>
+    <script src="vendor/angular-nive/angular-nive-0.7.0.js"></script>
 
     <!--
 
     Include these files for testing the app with mock backend (no Nive backend needed)
 
-    <script src="/vendor/angular-mocks/angular-mocks.js"></script>
-    <script src="/app/app-mock-backend.js"></script>
+    <script src="vendor/angular-mocks/angular-mocks.js"></script>
+    <script src="app/app-mock-backend.js"></script>
 
     -->
 
-    <script src="/app/app.js"></script>
+    <script src="app/app.js"></script>
 </body>
 </html>
